CONFIGURE_FILE(
  "${CMAKE_CURRENT_SOURCE_DIR}/VTKMFCSettings.cmake"
  "${CMAKE_CURRENT_BINARY_DIR}/VTKMFCSettings.cmake"
  COPYONLY
  )

INCLUDE("${CMAKE_CURRENT_BINARY_DIR}/VTKMFCSettings.cmake")

CONFIGURE_FILE(
  "${CMAKE_CURRENT_SOURCE_DIR}/vtkMFCConfigure.h.in"
  "${CMAKE_CURRENT_BINARY_DIR}/vtkMFCConfigure.h"
  )

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(MFC_SRCS
  vtkMFCWindow.cpp
  ) 

VTK_ADD_LIBRARY(vtkMFC ${VTK_MFC_LIB_TYPE} ${MFC_SRCS})

IF(VTK_MFC_EXTRA_LIBS)
  TARGET_LINK_LIBRARIES(vtkMFC ${VTK_MFC_EXTRA_LIBS})
ENDIF(VTK_MFC_EXTRA_LIBS)

TARGET_LINK_LIBRARIES(vtkMFC vtkRendering)

IF ( WIN32 )
  IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
    FILE(GLOB vtkMFCHeaderFiles "*.h")
    SET(vtkMFCHeaderFiles ${vtkMFCHeaderFiles}
      "${CMAKE_CURRENT_BINARY_DIR}/vtkMFCConfigure.h")
    INSTALL(FILES ${vtkMFCHeaderFiles}
      DESTINATION ${VTK_INSTALL_INCLUDE_DIR_CM24}
      COMPONENT Development
      )
  ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
ENDIF ( WIN32 )
